<resources>
    <string name="app_name">Firebase</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign out</string>
    <string name="field_name">Name</string>
    <string name="field_value">Age</string>
    <string name="add_to_database">Add to database</string>
    <string name="new_user_sign_up">New User? Sign up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="show_database_contents">Show database contents</string>
    <string name="back">Back</string>
</resources>
